corrected contrast error

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -379,7 +379,7 @@ section {
 
 /* Submit Button */
 .contact-form button {
-    background-color: var(--primary-color);
+    background-color: var(--accent2-color);
     color: var(--white);
     padding: 0.75rem 2rem;
     border: none;
